--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="responsive.css">
       <!-- fevicon -->
       <link rel="icon" href="" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="jquery.mCustomScrollbar.min.css">
       <!-- awesome fontfamily -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Tweaks for older IEs-->
@@ -33,7 +33,7 @@
    <body class="main-layout">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="" /></div>
+         <div class="loader"><img src="loading.gif" alt="" /></div>
       </div>
       <!-- end loader -->
    
@@ -92,12 +92,12 @@
                <div class="col-lg-9">
                   <div class="right_header_info">
                      <ul>
-                        <li><img style="margin-right: 15px;" src="images/phone_icon.png" alt="#" /><a href="#">987-654-3210</a></li>
-                        <li><img style="margin-right: 15px;" src="images/mail_icon.png" alt="#" /><a href="#">demo@gmail.com</a></li>
-                        <li><img src="images/search_icon.png" alt="#" /></li>
+                        <li><img style="margin-right: 15px;" src="phone_icon.png" alt="#" /><a href="#">987-654-3210</a></li>
+                        <li><img style="margin-right: 15px;" src="mail_icon.png" alt="#" /><a href="#">demo@gmail.com</a></li>
+                        <li><img src="search_icon.png" alt="#" /></li>
                          <li>
                            <button type="button" id="sidebarCollapse">
-                              <img src="images/menu_icon.png" alt="#" />
+                              <img src="menu_icon.png" alt="#" />
                            </button>
                         </li>
                      </ul>
@@ -126,10 +126,10 @@
                      <!-- The slideshow -->
                      <div class="carousel-inner">
                         <div class="carousel-item active">
-                           <img src="images/slider_1.png" alt="#" />
+                           <img src="slider_1.png" alt="#" />
                         </div>
                         <div class="carousel-item">
-                           <img src="images/slider_2.png" alt="#" />
+                           <img src="slider_2.png" alt="#" />
                         </div>
                      </div>
                      <div class="full center">
@@ -169,7 +169,7 @@
 
             <div class="col-lg-8">
                <div class="full margin_top_50_rs">
-                  <img class="img-responsive" src="images/about_us.png" alt="#" />
+                  <img class="img-responsive" src="about_us.png" alt="#" />
                </div>
             </div>
 
@@ -187,7 +187,7 @@
 
               <div class="col-lg-8">
                <div class="full text_align_right r-img">
-                  <img class="img-responsive" src="images/about_us_2.png" alt="#" />
+                  <img class="img-responsive" src="about_us_2.png" alt="#" />
                </div>
             </div>
 
@@ -221,7 +221,7 @@
               <div class="col-lg-4">
                  <div class="full">
                     <div class="choose_blog text_align_center">
-                        <img src="images/c1_icon.png" />
+                        <img src="c1_icon.png" />
                         <h4>FINANCING MADE EASY</h4>
                         <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
                     </div>
@@ -239,7 +239,7 @@
               <div class="col-lg-4">
                  <div class="full">
                     <div class="choose_blog text_align_center">
-                        <img src="images/c3_icon.png" />
+                        <img src="c3_icon.png" />
                         <h4>TRUSTED BY THOUSANDS</h4>
                         <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
                     </div>
@@ -287,7 +287,7 @@
                               <div class="full testimonial_cont text_align_center">
                                 <p><strong>Abuhanif jhf</strong><br><strong class="ornage_color">Rental</strong><br><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</i></p>
                                 <div class="full text_align_center margin_top_30">
-                                   <img src="images/testimonial_qoute.png">
+                                   <img src="testimonial_qoute.png">
                                 </div>
                               </div>
                             </div> 
@@ -298,13 +298,13 @@
                            <div class="testomonial_section">
                               <div class="full center">
                                 <div class="client_img">
-                                  <img src="images/testimonial.png" alt="#" />
+                                  <img src="testimonial.png" alt="#" />
                                 </div>
                               </div>
                               <div class="full testimonial_cont text_align_center">
                                 <p><strong>Hanif</strong><br><strong class="ornage_color">Rental</strong><br><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</i></p>
                                 <div class="full text_align_center margin_top_30">
-                                   <img src="images/testimonial_qoute.png">
+                                   <img src="testimonial_qoute.png">
                                 </div>
                               </div>
                             </div>  
@@ -316,13 +316,13 @@
                            <div class="testomonial_section">
                               <div class="full center">
                                 <div class="client_img">
-                                  <img src="images/testimonial.png" alt="#" />
+                                  <img src="testimonial.png" alt="#" />
                                 </div>
                               </div>
                               <div class="full testimonial_cont text_align_center">
                                 <p><strong>Hanif</strong><br><strong class="ornage_color">Rental</strong><br><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</i></p>
                                 <div class="full text_align_center margin_top_30">
-                                   <img src="images/testimonial_qoute.png">
+                                   <img src="testimonial_qoute.png">
                                 </div>
                               </div>
                             </div>  
