--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>avalon</title>
+      <title>hanif</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -19,7 +19,7 @@
       <!-- Responsive-->
       <link rel="stylesheet" href="responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="" type="image/gif" />
+      <link rel="icon" href="" type="gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="jquery.mCustomScrollbar.min.css">
       <!-- awesome fontfamily -->
@@ -85,7 +85,7 @@
                <div class="col-lg-3 logo_section">
                   <div class="full">
                      <div class="center-desk">
-                        <div class="logo"> <a href="index.html"><img src="images/logo.png" alt="#"></a> </div>
+                        <div class="logo"> <a href="index.html"><img src="logo.png" alt="#"></a> </div>
                      </div>
                   </div>
                </div>
@@ -93,7 +93,7 @@
                   <div class="right_header_info">
                      <ul>
                         <li><img style="margin-right: 15px;" src="phone_icon.png" alt="#" /><a href="#">987-654-3210</a></li>
-                        <li><img style="margin-right: 15px;" src="mail_icon.png" alt="#" /><a href="#">demo@gmail.com</a></li>
+                        <li><img style="margin-right: 15px;" src="mail_icon.png" alt="#" /><a href="#">abuhanifjhf552@gmail.com</a></li>
                         <li><img src="search_icon.png" alt="#" /></li>
                          <li>
                            <button type="button" id="sidebarCollapse">
@@ -281,7 +281,7 @@
                            <div class="testomonial_section">
                               <div class="full center">
                                 <div class="client_img">
-                                  <img width="100%" height="80%" src="images/hanif.jpg" alt="#" />
+                                  <img width="100%" height="80%" src="hanif.jpg" alt="#" />
                                 </div>
                               </div>
                               <div class="full testimonial_cont text_align_center">
@@ -480,12 +480,12 @@
    <div class="overlay"></div>
       
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="jquery.min.js"></script>
+      <script src="popper.min.js"></script>
+      <script src="bootstrap.bundle.min.js"></script>
       <!-- Scrollbar Js Files -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
+      <script src="jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="custom.js"></script>
       <script type="text/javascript">
         $(document).ready(function () {
             $("#sidebar").mCustomScrollbar({
