--- a/index.html
+++ b/index.html
@@ -29,8 +29,34 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
    </head>
-   <!-- body -->
-   <body class="main-layout">
+
+
+
+
+      
+
+<style> 
+
+#myDIV {
+
+  width: 300px;
+
+  height: 200px;
+
+  background: red;
+
+  animation: mymove 5s infinite;
+
+}
+
+@keyframes mymove {
+  50% {background-color: blue;}
+}
+</style> 
+
+
+  <!-- body -->
+   <body class="main-layout" id="myDIV">
       <!-- loader  -->
       <div class="loader_bg">
          <div class="loader"><img src="loading.gif" alt="" /></div>
