--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
   <!-- body -->
-   <body class="main-layout" id="myDIV">
+   <body class="main-layout" >
       <!-- loader  -->
       <div class="loader_bg">
          <div class="loader"><img src="loading.gif" alt="" /></div>
@@ -100,7 +100,11 @@
 
 
       <!-- section -->
-      <section id="home" class="top_section">
+      <section id="home" class="top_section"
+
+
+id="myDIV"
+>
          <div class="row">
             <div class="col-lg-12">
                <!-- header -->
