--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 #myDIV {
 
-  width: 300px;
+  width:100%;
 
-  height: 200px;
+  height: 100%;
 
   background: red;
 
@@ -57,6 +57,10 @@
 
   <!-- body -->
    <body class="main-layout" >
+
+<section. id="myDIV">
+
+
       <!-- loader  -->
       <div class="loader_bg">
          <div class="loader"><img src="loading.gif" alt="" /></div>
@@ -103,7 +107,7 @@
       <section id="home" class="top_section"
 
 
-id="myDIV"
+
 >
          <div class="row">
             <div class="col-lg-12">
@@ -283,6 +287,7 @@ id="myDIV"
            </div>
         </div>
       </section>
+</section>
       <!-- end section -->
 
        <!-- section -->
