--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
 
   <!-- body -->
-   <body class="main-layout" >
+   <body class="main-layout" id="myDIV" >
 
-<section id="myDIV">
+<section >
 
 
       <!-- loader  -->
