--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
               <div class="col-lg-4">
                  <div class="full">
                     <div class="choose_blog text_align_center">
-                        <img src="images/c2_icon.png" />
+                        <img src="c2_icon.png" />
                         <h4>WIDE RANGE OF BRANDS</h4>
                         <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
                     </div>
